--- a/blog_project/templates/home.html
+++ b/blog_project/templates/home.html
@@ -6,6 +6,14 @@
     <title>Blog</title>
 </head>
 <body>
-    <h1>Welcome to Blog</h1>
+    <h1> Blogs </h1>
+    <ul>
+        {% block content %}
+        {% for blogs in blog_list %}
+        <li><a href ="{% url 'post_detail' post.pk %}">{{post.title}}</a></li>
+        {% endfor %}
+        {% endblock content%}
+    </ul>
+  
 </body>
 </html>
